plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

allprojects {
    group = "aurora"
    version = "0.1.0"

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: "java"

    dependencies {
        implementation "org.jetbrains:annotations:26.1.0"
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    test {
        useJUnitPlatform()
    }
}

dependencies {
    subprojects.each {
        if (it.name != 'aurora-intellij') {
            implementation it
        }
    }
}

shadowJar {
    archiveClassifier.set('')
    manifest {
        attributes(
                'Main-Class': 'aurora.Main'
        )
    }
}

jar {
    enabled = false
}

tasks.jar.dependsOn(shadowJar)